# coriolis-openstack-utils

./: README.md  migration-config.conf.sample  requirements.txt  setup.cfg
coriolis_openstack_utils/: actions.py  assess_instance_cmd.py  assess_migration_cmd.py  conf.py  constants.py  instances.py  log.py  migration_cmd.py  openstack_client.py  security_groups.py  utils.py
coriolis_openstack_utils/actions/: __init__.py  base.py  coriolis_endpoint_actions.py  coriolis_transfer_actions.py  flavor_actions.py  keypair_actions.py  network_actions.py  secgroup_actions.py  tenant_actions.py
coriolis_openstack_utils/cli/: assess_instances.py  assess_migrations.py  flavors.py  formatter.py  keypair.py  migrations.py  network.py  ports.py  replicas.py  router.py  secgroups.py  shell.py  subnets.py  tenant.py  user.py
coriolis_openstack_utils/resource_utils/: instances.py  networks.py  routers.py  security_groups.py  subnets.py  users.py
coriolis_openstack_utils/schemas/: instance_assess_info.json
