[metadata]
name = coriolis-openstack-utils
summary = Utilities for migrating from one OpenStack to another using Coriolis
description-file =
    README.md
author = Cloudbase Solutions SRL
author-email = info@cloudbasesolutions.com
home-page = http://cloudbase.it
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    coriolis_openstack_utils

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    coriolis-openstack-util = coriolis_openstack_utils.cli.shell:main

coriolis_openstack_utils =
    migrate = coriolis_openstack_utils.cli.migrations:CreateMigrations
    assess_instance = coriolis_openstack_utils.cli.assess_instances:AssessInstances 
    assess_migration = coriolis_openstack_utils.cli.assess_migrations:AssessMigrations

[wheel]
universal = 1
